started adding tests and fixing mistakes.